--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 JWT_KEY = 'mysecretkey'
+MONGODB_CONNECTION='mongodb+srv://magneto1012:bGNr0dELzATpLyHj@notesappcluster.up6rr.mongodb.net/'
